Fixed some layout issues with the container minHeight and minWidth props.

--- a/web/styles.css
+++ b/web/styles.css
@@ -384,6 +384,9 @@
   .h-96 {
     height: calc(var(--spacing) * 96);
   }
+  .h-\[120px\] {
+    height: 120px;
+  }
   .h-full {
     height: 100%;
   }
